force-app/main/default/objects/ProductFeature__c/ProductFeature__c.object-meta.xml
<CustomObject>
    <description>Product Feature to describe additional product</description>
    <label>Product Feature</label>
    <nameField>
        <label>Product Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>