force-app/main/default/objects/ProductFeature__c/fields/DisplayContents__c.field-meta.xml
<CustomField>
    <fullName>DisplayContents__c</fullName>
    <description>contents to display under feature</description>
    <label>Display Contents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>