force-app/main/default/objects/ProductFeature__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to Financial Product</description>
    <label>Financial Product</label>
    <referenceTo>FinancialProduct__c</referenceTo>
    <relationshipLabel>Product Features</relationshipLabel>
    <relationshipName>ProductFeatures</relationshipName>
    <type>Lookup</type>
</CustomField>