force-app/main/default/objects/ProductFeature__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Feature Icon</description>
    <label>Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>