force-app/main/default/objects/ProductFeature__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>ImageUrl of feature</description>
    <label>Image Url</label>
    <type>Url</type>
</CustomField>