force-app/main/default/objects/ProductFeature__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>true if active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>