force-app/main/default/objects/ProductFeature__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order of sorting</description>
    <label>Order</label>
    <type>Checkbox</type>
</CustomField>