force-app/main/default/objects/ProductFeature__c/fields/ProductService__c.field-meta.xml
<CustomField>
    <fullName>ProductService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to Product service</description>
    <label>Product Service</label>
    <referenceTo>ProductService__c</referenceTo>
    <relationshipLabel>Product Features</relationshipLabel>
    <relationshipName>ProductFeatures</relationshipName>
    <type>Lookup</type>
</CustomField>