force-app/main/default/objects/ProductFeature__c/fields/SubTopic__c.field-meta.xml
<CustomField>
    <fullName>SubTopic__c</fullName>
    <description>sub category of product feature</description>
    <label>Sub Topic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>