force-app/main/default/objects/ProductFeature__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>product feature topic</description>
    <label>Topic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>